fix: safe area gap

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -32,8 +32,9 @@ h6 {
 
 #app {
   color: var(--ahnn-foreground);
-  padding: var(--app-gap);
-  padding-bottom: var(--app-padding-bottom);
+  margin: var(--app-gap);
+  margin-top: var(--app-gap-top);
+  margin-bottom: var(--app-gap-bottom);
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
